# guess

./: .flake8  .gitignore  DEVELOPMENT_NOTES.md  PROJECT_PLAN.md  PROJECT_PLAN.md.tmp  README.md  REQUIREMENTS.md  pyproject.toml
ai-plan/: PROJECT_PLAN.md  REQUIREMENTS.md
guess/: __init__.py  __main__.py  convert.py  css_colors.py  formatter.py  main.py  registry.py  utils.py
guess/converters/: __init__.py  base.py  bytesize.py  color.py  duration.py  number.py  permission.py  timestamp.py
tests/: test_bytesize.py  test_color.py  test_duration.py  test_integration.py  test_integration_simple.py  test_number.py  test_output_formatting.py  test_permission.py  test_timestamp.py  test_utils.py
