[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guess"
version = "1.0.0"
description = "Intelligent data format conversion utility"
authors = [{name = "sigh"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
guess = "guess.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "pytest-cov>=3.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
